# Nervous-Sensors

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
nervous_sensors/: Makefile  async_manager.py  cli.py  cli_listener.py  cli_utils.py  codec.py  connection_manager.py  data_manager.py  ecg_analyzer.py  folder_manager.py  gui.py  gui_manager.py  lsl_manager.py  nervous_ecg.py  nervous_eda.py  nervous_hr.py  nervous_scr.py  nervous_sensor.py  nervous_virtual.py  renforce.py  renforce_codec.py  renforce_data.py  renforce_file.py  renforce_gui.py  renforce_lsl.py  renforce_pb2.py  renforce_sensor.py  renforce_viewer.py  rt_ecg_analysis.py  test_lsl_receiver.py  utils.py  viewer.py
nervous_sensors/protocol/: .gitignore  README.md  renforce.options  renforce.proto
nervous_sensors/tests/: test1.py
tests/: connection_manager.py  fake_test.py  mock_bleak.py  mock_sensors.py  nervous_sensor.py  test_connection_manager.py  test_nervous_sensor.py
